# crustacean-states

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: all_dispatches.rs  every_nation_shard.rs  mutual_endorsements.rs  region_request.rs  region_request_performance.rs
src/: client.rs  dispatch.rs  lib.rs  macros.rs  rate_limiter.rs  request.rs
src/models/: dispatch.rs  mod.rs
src/parsers/: dispatch_deserialization.rs  happenings.rs  mod.rs  nation.rs  raw_nation.rs  raw_region.rs  region.rs
src/shards/: mod.rs  nation.rs  public_nation.rs  public_nation_shards.rs  region.rs  region_shards.rs  wa.rs  world.rs  world_assembly.rs  world_assembly_shards.rs  world_shards.rs
