[package]
name = "crustacean-states"
version = "0.2.0-alpha"
edition = "2021"
authors = ["Trisk (Aramos)"]
license = "MIT OR Apache-2.0"
description = "A NationStates API wrapper designed for ease of use"
repository = "https://github.com/triskofwhaleisland/crustacean-states"

[dependencies]
either = "1.8"
http = "0.2"
itertools = "0.11"
once_cell = "1.17"
quick-xml = { version = "0.30", features = ["serialize"] }
regex = { version = "1.8", default-features = false, features = ["std"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
dotenv = "0.15"
quick-xml = { version = "0.30", features = ["async-tokio", "serialize"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
