[package]
name = "crustacean-states"
version = "0.3.0-prealpha"
edition = "2021"
authors = ["Trisk (Aramos)"]
license = "MIT OR Apache-2.0"
description = "A NationStates API wrapper designed for ease of use"
repository = "https://github.com/triskofwhaleisland/crustacean-states"

[features]
default = ["client"]
client = ["dep:reqwest", "dep:tokio"]

[dependencies]
chrono = { version = "~0.4", features = ["std", "clock"] }
http = { version = "^1" }  # depends on reqwest
itertools = { version = "~0.13" }
quick-xml = { version = "~0.36", features = ["serialize"] }
regex = { version = "^1.8", default-features = false, features = ["std"] }
reqwest = { version = "0.12", optional = true }
serde = { version = "~1", features = ["derive"] }
strum = { version = "~0.26", features = ["derive"] }
thiserror = { version = "~1" }
tokio = { version = "~1", default-features = false, features = ["rt", "sync"], optional = true }
url = { version = "^2.2" }

[dev-dependencies]
dotenvy = "^0.15"
quick-xml = { version = "~0.36", features = ["async-tokio", "serialize"] }
tokio = { version = "~1", default-features = false, features = ["rt-multi-thread", "sync", "macros"] }
